[package]
name = "network"
version = "0.1.0"
edition = "2021"


[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }


[[bin]] # http1_server
name = "hts1"
path = "src/http1_server.rs"

[[bin]] # http1_client
name = "htc1"
path = "src/http1_client.rs"

