[package]
name = "network"
version = "0.1.0"
edition = "2021"


[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]] # hello_server
name = "hs"
path = "src/hello_server.rs"

[[bin]] # http_client
name = "hc"
path = "src/http_client.rs"

[[bin]] # echo server
name = "echo"
path = "src/echo_server.rs"

[[bin]] # reverse proxy
name = "proxy"
path = "src/reverse_proxy.rs"

